Normalizes user role data to integer arrays
Ensures user role data, specifically 'hiv_role' and 'sti_role',
is consistently handled as arrays of integers. This addresses
an issue where roles could be passed as term objects, causing
inconsistencies. The changes handle both term objects (extracting
'term_id') and direct integer IDs. This ensures consistency and
prevents errors during data processing.

--- a/My Jurisdiction v2.html
+++ b/My Jurisdiction v2.html
@@ -478,8 +478,14 @@
                             // If already an array, normalize to integers
                             if (Array.isArray(value)) {
                                 return value.map(function(item) {
-                                    if (typeof item === 'object' && item !== null && item.id !== undefined) {
-                                        return parseInt(item.id, 10);
+                                    if (typeof item === 'object' && item !== null) {
+                                        // Handle ACF term objects (term_id) and regular objects (id)
+                                        if (item.term_id !== undefined) {
+                                            return parseInt(item.term_id, 10);
+                                        }
+                                        if (item.id !== undefined) {
+                                            return parseInt(item.id, 10);
+                                        }
                                     }
                                     return parseInt(item, 10);
                                 }).filter(function(id) { return !isNaN(id); });
